# PrimerOS-test-project

./: CMakeLists.txt
include/test/: common.h  debug.h  driverlib.h  runner.h
include/test/driver/: common.h
include/test/driver/crc/: consumer.h
include/test/driver/disposable/: chain.h  resource.h
include/test/driver/dma/: transfer.h  uart.h
include/test/driver/eusci/: spi.h  uart.h
include/test/driver/io/: handler.h
include/test/driver/stack/: deferred.h  pointer.h
include/test/driver/timer/: dispose.h  multiple.h
include/test/driver/vector/: trigger.h
include/test/driver/wdt/: disabled.h  interval.h  watchdog.h
include/test/kernel/: common.h
include/test/kernel/action/: sorting.h
include/test/kernel/dispose/: chain.h  resource.h
include/test/kernel/event/: inheritance.h  trigger.h
include/test/kernel/process/: lifecycle.h
include/test/kernel/queue/: fifo.h  priority.h  sorting.h
include/test/kernel/standalone/: timing.h  wakeup.h
include/test/kernel/sync/: barrier.h  inversion.h
src/: common.c  driverlib.c  runner.c
src/driver/: common.c
src/driver/crc/: consumer.c
src/driver/disposable/: chain.c  resource.c
src/driver/dma/: transfer.c  uart.c
src/driver/eusci/: spi.c  uart.c
src/driver/io/: handler.c
src/driver/stack/: deferred.c  pointer.c
src/driver/timer/: dispose.c  multiple.c
src/driver/vector/: trigger.c
src/driver/wdt/: disabled.c  interval.c  watchdog.c
src/kernel/: common.c
src/kernel/action/: sorting.c
src/kernel/dispose/: chain.c  resource.c
src/kernel/event/: inheritance.c  trigger.c
src/kernel/process/: lifecycle.c
src/kernel/queue/: fifo.c  priority.c  sorting.c
src/kernel/standalone/: timing.c  wakeup.c
src/kernel/sync/: barrier.c  inversion.c
